--- a/pre/template.html
+++ b/pre/template.html
@@ -17,8 +17,8 @@
         <div class="main">
             <section class="content b-chart active" id="chartBlock">
                 <div class="b-title">
-                    <h1 class="title" id="title">Figura 2.6. Personas con enfermedades crónicas por sexo y grupo de edad en España, 2020</h1>
-                    <h2 class="subtitle" id="subtitle">Datos en porcentajes (%). Todas las enfermedades comparten la misma escala vertical.</h2>
+                    <h1 class="title">Figura 2.6. Personas con enfermedades crónicas por sexo y grupo de edad en España, 2020</h1>
+                    <h2 class="subtitle">Datos en porcentajes (%). Todas las enfermedades comparten la misma escala vertical.</h2>
                 </div>
                 <div class="chart__logics">
                     <div class="chart__legend">
@@ -87,7 +87,7 @@
                 </div>
                 <p class="text__header">Descarga de datos</p>
                 <p class="text__paragraph">Los datos procesados en esta visualización los puede encontrar en <a class="link" href="https://github.com/CarlosMunozDiazCSIC/informe_perfil_mayores_2022_salud_2_6" target="_blank">este repositorio de Github</a>.</p>
-                <p class="text__paragraph">Si desea descargarlos, puede hacerlo desde <a class="link" href="https://raw.githubusercontent.com/CarlosMunozDiazCSIC/informe_perfil_mayores_2022_salud_2_6/main/data/evolucion_supervivientes.csv" target="_blank">aquí</a>.</p>
+                <p class="text__paragraph">Si desea descargarlos, puede hacerlo desde <a class="link" href="https://raw.githubusercontent.com/CarlosMunozDiazCSIC/informe_perfil_mayores_2022_salud_2_6/main/data/enfermedades_cronicas_ees_2020.csv" target="_blank">aquí</a>.</p>
                 <p class="text__header">Descargar como PNG</p>
                 <p class="text__paragraph">También puede descargar el gráfico como una imagen .png haciendo click <button class="btn_share" id="pngImage">aquí</button></p> 
                 <p class="text__paragraph">El gráfico se descargará con los últimos filtros que haya utilizado.</p>
