--- a/pre/template.html
+++ b/pre/template.html
@@ -18,7 +18,7 @@
             <section class="content b-chart active" id="chartBlock">
                 <div class="b-title">
                     <h1 class="title">Figura 2.6. Personas con enfermedades crónicas por sexo y grupo de edad en España, 2020</h1>
-                    <h2 class="subtitle">Datos en porcentajes (%). Todas las enfermedades comparten la misma escala vertical.</h2>
+                    <h2 class="subtitle">Gráfico 17/2022. Datos en porcentajes (%). Todas las enfermedades comparten la misma escala vertical.</h2>
                 </div>
                 <div class="chart__logics">
                     <div class="chart__legend">
@@ -72,14 +72,14 @@
                 <!-- Pie de gráfico -->
                 <div class="chart__footer">
                     <div class="chart__source">
-                        <p class="chart__source--data"><span>Fuente: </span><span id="data-source">INE (Encuesta Europea de Salud; Problemas o enfermedades crónicas o de larga evolución padecidas en los últimos 12 meses y diagnosticados por un médico; consulta en marzo de 2022)</span> y Departamento de Población, CSIC</p>
+                        <p class="chart__source--data"><span>Fuente: </span><span id="data-source">INE (Encuesta Europea de Salud; Problemas o enfermedades crónicas o de larga evolución padecidas en los últimos 12 meses y diagnosticados por un médico; consulta en marzo de 2022)</span> y Laboratorio de Estadísticas Experimentales (CSIC)</p>
                         <p class="chart__source--copyright"><a class="link" href="https://creativecommons.org/licenses/by/4.0/deed.en_US" target="_blank">CC BY 4.0</a></p>
                     </div>
                     <p class="chart__note"><span>Notas: </span><span id="data-note"></span></p>
                 </div>
                 <div class="logo">
-                    <img src="https://raw.githubusercontent.com/CarlosMunozDiazCSIC/informe_perfil_mayores_2022_salud_2_6/main/pre/cchs.png" alt="Logo del Centro de Ciencias Humanas y Sociales" width="100%" height="100%">
-                </div>         
+                    <img src="https://raw.githubusercontent.com/CarlosMunozDiazCSIC/informe_perfil_mayores_2022_salud_2_6/main/pre/iegd_logo.png" alt="Logo del Instituto de Economía, Geografía y Demografía (IEGD) del CSIC" width="100%" height="100%">
+                </div>          
             </section>
             <section class="content b-data">
                 <div class="b-title">
