--- a/pre/template.html
+++ b/pre/template.html
@@ -78,10 +78,10 @@
                 <!-- Pie de gráfico -->
                 <div class="chart__footer">
                     <div class="chart__source">
-                        <p class="chart__source--data"><span>Fuente: </span><span id="data-source">INE (Encuesta Europea de Salud; Problemas o enfermedades crónicas o de larga evolución padecidas en los últimos 12 meses y diagnosticados por un médico; consulta en marzo de 2022)</span> y Laboratorio de Estadísticas Experimentales (CSIC)</p>
+                        <p class="chart__source--data"><span>Fuente: </span><span>Instituto Nacional de Estadística (INE; Encuesta Europea de Salud; Problemas o enfermedades crónicas o de larga evolución padecidas en los últimos 12 meses y diagnosticados por un médico). Consulta en marzo de 2022</span> y Laboratorio de Estadísticas Experimentales (CSIC)</p>
                         <p class="chart__source--copyright"><a class="link" href="https://creativecommons.org/licenses/by/4.0/deed.en_US" target="_blank">CC BY 4.0</a></p>
                     </div>
-                    <p class="chart__note"><span>Notas: </span><span id="data-note"></span></p>
+                    <p class="chart__note"><span>Notas: </span><span></span></p>
                 </div>
                 <div class="logo">
                     <img src="https://raw.githubusercontent.com/CarlosMunozDiazCSIC/informe_perfil_mayores_2022_salud_2_6/main/pre/iegd_logo.png" alt="Logo del Instituto de Economía, Geografía y Demografía (IEGD) del CSIC" width="100%" height="100%">
@@ -97,7 +97,7 @@
                 <p class="text__header">Descargar como PNG</p>
                 <p class="text__paragraph">También puede descargar el gráfico como una imagen .png haciendo click <button class="btn_share" id="pngImage">aquí</button></p> 
                 <p class="text__paragraph">El gráfico se descargará con los últimos filtros que haya utilizado.</p>
-                <p class="text__paragraph">Es conveniente advertir que, tras hacer una modificación de filtros, debe esperar unos segundos (entre 5 y 10) para que se renderice correctamente el bloque y pueda descargar la imagen de forma satisfactoria.</p>
+                <p class="text__paragraph">Es conveniente advertir que, tras hacer una modificación de filtros, debe esperar unos segundos (entre 6 y 10) para que se renderice correctamente el bloque y pueda descargar la imagen de forma satisfactoria.</p>
             </section>
             <section class="content b-iframes">
                 <div class="b-title">
@@ -108,7 +108,7 @@
                 <p class="text__paragraph">Si su sitio web acepta el uso de librerías de terceros, como es el caso de Pym.js, y desea disponer la opción responsiva de esta visualización, copie el siguiente código:</p>
                 <textarea class="text__iframe" disabled="" id="iframe-responsive"></textarea>
                 <p class="text__header">Embeber iframe con alto fijo</p>
-                <p class="text__paragraph">Si su sitio web no acepta iframes responsivos, puede utilizar el siguiente código con altura fija. En algunos gráficos del informe (tablas y visualizaciones largas en vertical) es posible que exista scroll vertical al incrustar el iframe en su página web.</p>             
+                <p class="text__paragraph">Si su sitio web no acepta iframes responsivos, puede utilizar el siguiente código con altura fija. Es posible que exista scroll vertical al incrustar el iframe en su página web.</p>             
                 <p class="text__paragraph">Si desea integrar esta visualización en su propia página, puede hacerlo copiando el siguiente código:</p>
                 <textarea class="text__iframe" disabled="" id="iframe-fixed"></textarea>
             </section>
