Cambios en botones

--- a/pre/template.html
+++ b/pre/template.html
@@ -17,8 +17,8 @@
         <div class="main">
             <section class="content b-chart active" id="chartBlock">
                 <div class="b-title">
-                    <h1 class="title">Figura 2.6. Personas con enfermedades crónicas por sexo y grupo de edad en España, 2020</h1>
-                    <h2 class="subtitle">Gráfico 17/2022. Por defecto, todas las enfermedades comparten la misma escala vertical (al 70%)</h2>
+                    <h1 class="title">Figura 2.6. Personas con enfermedades crónicas por sexo y grupo de edad. España, 2020</h1>
+                    <h2 class="subtitle">Por defecto, todas las enfermedades comparten la misma escala vertical (al 70%)</h2>
                 </div>
                 <p class="text__specification">Seleccione la enfermedad que desea visualizar. También puede modificar el eje Y para ajustarlo a una escala individual y observar así, con más detalle, la comparativa por edad para dicha enfermedad.</p>
                 <div class="chart__logics">
@@ -68,7 +68,7 @@
                         <option value="ulcera">Úlcera de estómago</option>
                         <option value="varices_piernas">Varices en las piernas</option>
                     </select>
-                    <button class="btn__yaxis" id="change_yaxis">Eje Y variable</button>
+                    <button class="btn__yaxis" id="change_yaxis">Cambiar a eje variable</button>
                 </div>
                 <div class="chart__viz">
                     <p class="text__yaxis">Porcentaje</p>
@@ -80,7 +80,7 @@
                     <div class="chart__source">
                         <div class="chart__source--info">
                             <p class="chart__source--data"><span>Fuente: </span>Instituto Nacional de Estadística (INE). Encuesta Europea de Salud de 2020. Consulta en febrero de 2022.</p>
-                            <p class="chart__source--elab"><span>Elaboración: </span>Laboratorio de Estadísticas Experimentales (CSIC).</p>
+                            <p class="chart__source--elab"><span>Elaboración: </span>Laboratorio de Estadísticas Experimentales (CSIC). Imagen 17/2022</p>
                         </div>
                         <p class="chart__source--copyright"><a class="link" href="https://creativecommons.org/licenses/by/4.0/deed.en_US" target="_blank">CC BY 4.0</a></p>
                     </div>
