Cambio en título

--- a/pre/template.html
+++ b/pre/template.html
@@ -17,7 +17,7 @@
         <div class="main">
             <section class="content b-chart active" id="chartBlock">
                 <div class="b-title">
-                    <h1 class="title">Figura 2.6. Personas con enfermedades crónicas por sexo y grupo de edad. España, 2020</h1>
+                    <h1 class="title">Figura 2.6. Proporción de personas con enfermedades crónicas por sexo y grupo de edad. España, 2020</h1>
                     <h2 class="subtitle">Por defecto, todas las enfermedades comparten la misma escala vertical (al 70%)</h2>
                 </div>
                 <p class="text__specification">Seleccione la enfermedad que desea visualizar. También puede modificar el eje Y para ajustarlo a una escala individual y observar así, con más detalle, la comparativa por edad para dicha enfermedad.</p>
