--- a/pre/template.html
+++ b/pre/template.html
@@ -79,16 +79,17 @@
                 <div class="chart__footer">
                     <div class="chart__source">
                         <div class="chart__source--info">
-                            <p class="chart__source--data"><span>Fuente: </span>Instituto Nacional de Estadística (INE). Encuesta Europea de Salud de 2020. Consulta en febrero de 2022.</p>
+                            <p class="chart__source--data"><span>Fuente: </span>Instituto Nacional de Estadística (INE). <a class="link" href="https://www.ine.es/jaxi/Tabla.htm?path=/t15/p420/a2019/p04/l0/&file=02007.px&L=0" target="_blank">Encuesta Europea de Salud</a> de 2020. Consulta en febrero de 2022.</p>
                             <p class="chart__source--elab"><span>Elaboración: </span>Laboratorio de Estadísticas Experimentales (CSIC). Imagen 17/2022</p>
                         </div>
                         <p class="chart__source--copyright"><a class="link" href="https://creativecommons.org/licenses/by/4.0/deed.en_US" target="_blank">CC BY 4.0</a></p>
                     </div>
                     <p class="chart__note"><span>Notas: </span>El epígrafe concreto recogido en esta visualización es 'Problemas o enfermedades crónicas o de larga evolución padecidas en los últimos 12 meses y diagnosticados por un médico'</p>
                 </div>
-                <div class="logo">
-                    <img src="https://raw.githubusercontent.com/CarlosMunozDiazCSIC/informe_perfil_mayores_2022_salud_2_6/main/pre/iegd_logo.png" alt="Logo del Instituto de Economía, Geografía y Demografía (IEGD) del CSIC" width="100%" height="100%">
-                </div>          
+                <div class="chart__logos">
+                    <img class="logo_enr" src="https://raw.githubusercontent.com/CarlosMunozDiazCSIC/informe_perfil_mayores_2022_salud_2_6/main/pre/nuevo_logo_enr.jpg" alt="Logo de Envejecimiento en Red" width="100%" height="100%">
+                    <img class="logo_csic" src="https://raw.githubusercontent.com/CarlosMunozDiazCSIC/informe_perfil_mayores_2022_salud_2_6/main/pre/logotipo_csic.png" alt="Logo del Consejo Superior de Investigaciones Científicas" width="100%" height="100%">
+                </div>         
             </section>
             <section class="content b-data">
                 <div class="b-title">
